Fix scrolling issue/issue with scrollbars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ li {
 }
 
 html, body {
-	height: 100%
+	height: 100%;
 }
 
 body {
@@ -33,8 +33,9 @@ body {
 }
 
 #disp {
-	padding: 20px;
+	overflow-y: scroll;
 	flex-grow: 1;
+	padding: 20px;
 	background: #333;
 	* {
 			color: #fff;
